z-index fix for header

--- a/assets/styles/ie/ie7.css
+++ b/assets/styles/ie/ie7.css
@@ -15,6 +15,8 @@
 
 /* Main Header */
 
+#header{position: relative; z-index: 2000;}
+
 /* Negative text indent fix */
 #search input[name="search"]{
 	line-height: 999px; /* Set it higher than your image height */
